# mlops-lab

./: .env  .gitignore  deploy.sh  docker-compose.yml  pyproject.toml  task-definition.json
.github/workflows/: cd.yml  ci.yml  integration-tests.yml  lint-autofix.yml
reader/: Dockerfile  app.py  pyproject.toml
src/config/: message.txt
src/reader/: app.py  pyproject.toml
src/writer/: pyproject.toml
writer/: Dockerfile  app.py  pyproject.toml
